# gamepwnage

./: CMakeLists.txt  LICENSE
include/gamepwnage/: armhook.h  config.h  dynlib.h  extras.h
src/: armhook.c  armhook.h  config.h  dynlib.c  dynlib.h  extras.c  extras.h  hook86.c  hook86.h  inlinehook.c  inlinehook.h  mem.c  mem.h  memscan.c  memscan.h  nop.c  nop.h  plthook.c  proc.c  proc.h  vftable.c  vftable.h
src/windows/: hook86.c  hook86.h  mem.c  mem.cpp  mem.h  mem_ex.c  nop.c  nop.h  nop_ex.c
